registe login done register without succes message, before npm run watch

--- a/.env
+++ b/.env
@@ -31,3 +31,12 @@ DATABASE_URL="mysql://admin_movies:12345678@127.0.0.1:3306/admin_blog"
 ###> symfony/mailer ###
 MAILER_DSN=null://null
 ###< symfony/mailer ###
+
+###> symfony/sendgrid-mailer ###
+# MAILER_DSN=sendgrid://KEY@default
+###< symfony/sendgrid-mailer ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+#AILER_DSN=gmail://flix.mail.bot@gmail.com:ORFokBiVUn@default
+###< symfony/google-mailer ###
